# custom_top

./: .gitignore  CMakeLists.txt  Makefile  readme.md
include/: _app_state.h  app_state.h  process.h  state.h  sysinfo.h  ui.h  utils.h
src/: app_state.c  main.c  process.c  state.c  sysinfo.c  ui.c  utils.c
